--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
         <div class="card">
             <a href="https://www.linkedin.com/in/gabrielle-gui/" 
                  target=_blank>
-            <img 
-                class="avatar" 
-                src="images/gabbie.png" 
-                alt="gabbie wearing glasses and smiling at the camera"
-                class="linkedin">     
+                <div class="me-img"></div>   
             </a>
             <div>
                 <h3>Gabbie Gui</h3>
