--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <div class="card">
             <a href="https://www.linkedin.com/in/gabrielle-gui/" 
                  target=_blank>
-                <div class="me-img"></div>   
+                <img 
+                class="avatar" 
+                src="images/gabbie.png" 
+                alt="gabbie wearing glasses and smiling at the camera"
+                class="linkedin">    
             </a>
             <div>
                 <h3>Gabbie Gui</h3>
